added second activity Repo ,dispalyed user data in repo activity and displayed webview

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="something_went_wrong">Something went wrong..</string>
     <string name="alien">An alien is probably blocking your signal.</string>
     <string name="retry">RETRY</string>
+    <string name="link"><a href="https://www.google.com/">Google</a></string>
+
 </resources>
